...

    <string name="listen_service_description">Service for listening to TherapyGuide audio</string>
    <string name="alarm_handler_description">Receiver to handle alarms such as the diary reminder</string>
    <string name="boot_handler_description">Receiver to handle recreation of the diary reminder on device boot</string>

    <string name="listen_tab_name">Sleep</string>
    <string name="diary_tab_name">Diary</string>
    <string name="kindness_tab_name">Kindness</string>

    <string name="settings">Settings</string>
    <string name="show_intro">How to use this app</string>
    <string name="show_about">About Tiffany Armitage</string>

    <string name="pref_diary_alert_title">Daily diary reminder</string>
    <string name="pref_diary_alert_summary_on">On</string>
    <string name="pref_diary_alert_summary_off">Off</string>

    <string name="pref_diary_alert_time_title">Diary reminder time</string>
    <string name="pref_diary_alert_time_dialog_title">Set the time for your daily diary reminder</string>
    <string name="pref_diary_alert_time_save_button">Save</string>
    <string name="pref_diary_alert_time_cancel_button">Cancel</string>

    <string name="diary_reminder_notification_channel_name">Diary Reminder</string>
    <string name="diary_reminder_notification_channel_description">Reminder to make diary entry</string>
    <string name="diary_reminder_notification_title">Therapy Guide diary reminder</string>
    <string name="diary_reminder_notification_message">Tap to make a diary entry for today</string>
    <string name="diary_reminder_notification_ticker_text">Therapy Guide diary reminder</string>
...
