<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    app:titleTextAppearance="@style/ToolbarTitleText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    tools:ignore="UnusedAttribute" />